# docs/swagger.json
@@ -6,9 +6,73 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "92.255.78.139:8000",
+    "host": "188.243.187.57:8000",
     "basePath": "/api/v1/",
     "paths": {
+        "/auth/confirm": {
+            "post": {
+                "description": "user confirm email",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "User Confirm",
+                "parameters": [
+                    {
+                        "description": "confirm info",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1.confirmUserRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/v1.statusResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errorResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/me": {
             "get": {
                 "security": [
@@ -293,7 +357,7 @@
                 }
             }
         },
-        "/users/profile/": {
+        "/users/profile/{user_name}": {
             "get": {
                 "description": "get user profile",
                 "consumes": [
@@ -309,8 +373,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "username",
-                        "name": "username",
+                        "description": "user_name",
+                        "name": "user_name",
                         "in": "path",
                         "required": true
                     }
@@ -368,8 +432,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "username",
-                        "name": "username",
+                        "description": "user_name",
+                        "name": "user_name",
                         "in": "path",
                         "required": true
                     },
@@ -419,6 +483,17 @@
         }
     },
     "definitions": {
+        "v1.confirmUserRequest": {
+            "type": "object",
+            "required": [
+                "confirm_token"
+            ],
+            "properties": {
+                "confirm_token": {
+                    "type": "string"
+                }
+            }
+        },
         "v1.errorResponse": {
             "type": "object",
             "properties": {
@@ -492,11 +567,8 @@
                 "middle_name": {
                     "type": "string"
                 },
-                "roles": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
+                "role": {
+                    "type": "string"
                 },
                 "username": {
                     "type": "string"
@@ -506,17 +578,15 @@
         "v1.userSignInInput": {
             "type": "object",
             "required": [
-                "email",
+                "login",
                 "password"
             ],
             "properties": {
-                "email": {
-                    "description": "UserName string `json:\"username\" validate:\"required,min=2,max=64\"`",
-                    "type": "string",
-                    "maxLength": 64
+                "login": {
+                    "type": "string"
                 },
                 "password": {
-                    "description": "Phone    string `json:\"phone\" validate:\"required,phone,max=13\"`",
+                    "description": "UserName string `json:\"username\" validate:\"required,min=2,max=64\"`\nEmail string `json:\"email\" binding:\"required,email,max=64\"`\nPhone    string `json:\"phone\" validate:\"required,phone,max=13\"`",
                     "type": "string",
                     "maxLength": 64,
                     "minLength": 8
